// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-3 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-5 {
  color: #4a4f62;
}

.emotion-5 a {
  color: inherit;
}

.emotion-5 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-5:hover {
  color: #4f0599;
}

.emotion-5:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-5:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-7 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-16 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="emotion-0 emotion-1"
  >
    <thead
      class="emotion-2 emotion-3"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <th
          class="emotion-6 emotion-7"
        >
          ID
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Status
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-12"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-15 emotion-16"
        >
          165
        </td>
        <td
          class="emotion-15 emotion-16"
        >
          Ongoing
        </td>
        <td
          class="emotion-15 emotion-16"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-15 emotion-16"
        >
          56
        </td>
        <td
          class="emotion-15 emotion-16"
        >
          Resolved
        </td>
        <td
          class="emotion-15 emotion-16"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-3 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-5 {
  color: #4a4f62;
}

.emotion-5 a {
  color: inherit;
}

.emotion-5 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-5:hover {
  color: #4f0599;
}

.emotion-5:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-5:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-7 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-14 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-14.emotion-14 {
  height: 80px;
  position: relative;
}

.emotion-15.emotion-15 {
  position: absolute;
  top: 16px;
  left: 50%;
}

.emotion-16 {
  height: 40px;
  width: 40px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<table
    class="emotion-0 emotion-1"
  >
    <thead
      class="emotion-2 emotion-3"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <th
          class="emotion-6 emotion-7"
        >
          ID
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-10"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-13 emotion-14"
          colspan="2"
        >
          <div
            class="emotion-15"
          >
            <svg
              class="CircularProgressbar  emotion-16 emotion-17"
              data-test-id="CircularProgressbar"
              viewBox="0 0 100 100"
            >
              <path
                class="CircularProgressbar-trail"
                d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
                fill-opacity="0"
                stroke-width="16"
                style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
              />
              <path
                class="CircularProgressbar-path"
                d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
                fill-opacity="0"
                stroke-width="16"
                style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
